# ruvector

./: .gitignore  Cargo.toml  PERFORMANCE_BENCHMARK_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  README.md  package.json  test_optimization.sh  turbo.json
.github/: CI_CD_GUIDE.md  CI_CD_SETUP_SUMMARY.md  FILES_CREATED.md  WORKFLOWS_OVERVIEW.md  dependabot.yml
.github/workflows/: agentic-synth-ci.yml  auto-fix-with-agents.yml  build-attention.yml  build-gnn.yml  build-graph-node.yml  build-native.yml  build-router.yml  build-tiny-dancer.yml  build.yml  docs.yml  publish.yml  quality.yml  quick-fix-agent.yml  ruvllm-native.yml  sona-napi.yml
benchmark_results/: benchmark_medium.json  benchmark_small.json
benchmarks/: .gitignore  BENCHMARK_GUIDE.md  BENCHMARK_SUMMARY.md  BOTTLENECK_ANALYSIS.md  IMPLEMENTATION_REPORT.md  INDEX.md  README_NEW.md  compare-results.mjs  package.json  performance-test.mjs  run-benchmarks.sh
crates/micro-hnsw-wasm/: Cargo.toml  README.md
crates/micro-hnsw-wasm/src/: lib.rs
crates/ruvector-bench/: Cargo.toml
crates/ruvector-bench/src/: lib.rs
crates/ruvector-cli/: Cargo.toml
crates/ruvector-cli/src/: main.rs  mcp_server.rs
crates/ruvector-core/: Cargo.toml
crates/ruvector-core/benches/: distance_metrics.rs  hnsw_search.rs
crates/ruvector-core/src/: config.rs  distance.rs  embeddings.rs  error.rs  index.rs  init.rs  lib.rs  lockfree.rs  quantization.rs  storage.rs  vector_db.rs
crates/ruvector-core/src/index/: flat.rs  hnsw.rs
crates/ruvector-gnn/: Cargo.toml
crates/ruvector-gnn-node/: Cargo.toml  package.json
crates/ruvector-gnn-node/npm/linux-arm64-gnu/: package.json
crates/ruvector-gnn-node/npm/linux-x64-gnu/: package.json
crates/ruvector-gnn-node/src/: lib.rs
crates/ruvector-gnn/src/: attention_backend.rs  error.rs  lib.rs  search_v2.rs
crates/ruvector-node/: Cargo.toml  package.json
crates/ruvector-node/src/: lib.rs
crates/ruvector-postgres/: Cargo.toml  Dockerfile  README.md
crates/ruvector-postgres/docker/: Dockerfile  init.sql
crates/ruvector-postgres/scripts/: download_models.rs
crates/ruvector-postgres/sql/: ruvector--0.1.0.sql
crates/ruvector-postgres/tests/: sparql_standalone.rs
crates/ruvector-router-ffi/: package.json
crates/ruvector-tiny-dancer-core/: README.md
crates/ruvector-tiny-dancer-node/: package.json
crates/ruvector-wasm/: Cargo.toml  package.json
crates/ruvector-wasm/src/: lib.rs
crates/rvlite/: Cargo.toml
crates/rvlite/examples/: demo.html
crates/rvlite/src/: lib.rs
crates/rvlite/tests/: cypher_integration_test.rs  wasm.rs
crates/sona/: Cargo.toml
crates/sona/benches/: sona_bench.rs
crates/sona/src/: engine.rs  lib.rs  lora.rs  reasoning_bank.rs  time_compat.rs  trajectory.rs  types.rs
crates/wasm-app-store/src/: payments_integration.rs
docs/: AI_AGENT_AUTO_FIX.md  COMPREHENSIVE_DEEP_REVIEW_REPORT.md  GITHUB_WORKFLOWS.md  INDEX.md  INITIALIZATION_IMPLEMENTATION_SUMMARY.md  LIVE_API_VALIDATION_REPORT.md  PUBLISHING.md  QA_AGENT_SUMMARY.md  REPO_STRUCTURE.md  SECURITY_AUDIT_REPORT.md  SIMULATION_TEST_RESULTS.md  STREAMING_OPTIMIZATION_RELEASE.md  STREAMING_OPTIMIZATION_TEST_RESULTS.md  VALIDATION_REPORT.md  WORKFLOW_QUICKSTART.md
docs/analysis/: CRITICAL_VERIFICATION_REPORT.md
docs/analysis/genomic-optimization/: CODE_QUALITY_ASSESSMENT.md  EXECUTIVE_SUMMARY.md  NICU_DNA_ANALYSIS_OPTIMIZATION.md
docs/architecture/: EXECUTIVE_SUMMARY.md  component-diagram.txt  initialization-system-design.md
docs/guide/: INITIALIZATION.md  INITIALIZATION_QUICK_START.md
docs/research/: COMPREHENSIVE_NICU_INSIGHTS.md  EXECUTIVE_METRICS_SUMMARY.md  README.md  nicu-genomic-vector-architecture.md  nicu-quick-start-guide.md
docs/research/algorithms/: vector-graph-algorithms.md
docs/reviews/: CODE_REVIEW_INIT_SYSTEM.md  DOCUMENTATION_IMPROVEMENT_PLAN.md  DOCUMENTATION_REVIEW.md
docs/status/: BUILD_PROCESS.md  BUILD_SUMMARY.md  DEPLOYMENT_STATUS.md  PHASE2_MULTIPLATFORM_COMPLETE.md  PHASE3_WASM_STATUS.md  READY-TO-PUBLISH.md
docs/swebench/: README.md  small-model-comparison.md
examples/: config_demo.rs  initialization_demo.rs
examples/conceptnet-integration/: Cargo.toml
examples/dynamic-attention/: README.md  package.json
examples/exo-ai-2025/: README.md
examples/kuiper_belt/: AGENT12_QUICK_REFERENCE.md  AGENT13_ANALYSIS_INDEX.txt  AGENT13_COMPREHENSIVE_ANALYSIS.txt  AGENT13_ETNO_ANALYSIS.json  AGENT13_EXECUTIVE_SUMMARY.md  AGENT13_EXTREME_TNO_REPORT.txt  AGENT14_DELIVERY_SUMMARY.md  AGENT3_COMPLETION_SUMMARY.txt  AGENT9_MMR_INDEX.md  AGENT_11_KOZAI_LIDOV_RESEARCH.md  ANALYSIS_AGENTS_COORDINATION.md  ANTI_ALIGNMENT_ANALYSIS_METHODOLOGY.md  ANTI_ALIGNMENT_ANALYSIS_RESULTS.md  ANTI_ALIGNMENT_QUICK_START.md  COMPLETION_REPORT.txt  DYNAMICAL_STABILITY_REPORT.md  INDEX_AGENT14_COMPLETE.md  KOZAI_LIDOV_ANALYSIS.txt  KOZAI_LIDOV_DATA.json  README_AGENT14_ANTI_ALIGNMENT.md  anti_alignment_analysis.rs  anti_alignment_main.rs  dynamical_stability_analysis.rs  etno_analysis_planet_nine.py  etno_comprehensive_analysis.py  kozai_lidov_analysis.py  kozai_lidov_mechanism.rs  mod.rs
examples/mathpix/: Cargo.toml
examples/ruvLLM/: Cargo.toml  README.md
examples/scipix/: Cargo.toml  README.md
nghi-docs/: 00_roadmap.md  01_setup_and_basics.md  02_core_concepts.md  03_error_handling_and_traits.md  04_async_and_concurrency.md  05_advanced_systems.md  06_ruvector_architecture.md
nghi-examples/: 00_examples_overview.md  01_semantic_search.md  02_image_similarity.md  03_recommendation_system.md  04_rag_pipeline.md
npm/: package-lock.json
router-core/src/: distance.rs  index.rs
scripts/: comprehensive-validation.sh  publish-tiny-dancer.sh  test-workflow-logic.sh  validate-workflows.sh
src/burst-scaling/: package.json
tests/: .gemini-test-manifest  GEMINI_FILES_SUMMARY.txt  GEMINI_QUICK_REFERENCE.md  GEMINI_RECOMMENDATION.md  GEMINI_TESTING_GUIDE.md  GEMINI_TEST_SUMMARY.txt  README.md  gemini-latest-models-test.mjs  gemini-model-test-results-sample.json  openrouter-models-test.mjs  test_initialization.rs  validate-live-apis.mjs  validate-published-packages.mjs
(+223 files in other folders)
