[package]
name = "ruvector-gnn-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Node.js bindings for Ruvector GNN via NAPI-RS"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
ruvector-gnn = { version = "0.1.15", path = "../ruvector-gnn", default-features = false }
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2"

[features]
default = []
# Enable attention-enhanced search functions
attention = ["ruvector-gnn/attention"]
hyperbolic = ["attention", "ruvector-gnn/hyperbolic"]
edge-featured = ["attention", "ruvector-gnn/edge-featured"]
flash-attention = ["attention", "ruvector-gnn/flash-attention"]
moe = ["attention", "ruvector-gnn/moe"]
full-attention = ["hyperbolic", "edge-featured", "flash-attention", "moe"]

[profile.release]
lto = true
strip = true
